--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -1,6 +1,7 @@
 .card {
-    background: white;
-    width: 50%;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
-    border-radius: 10px;
-  }
+  background: white;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  border-radius: 10px;
+  margin: 4rem;
+  padding: 2rem;
+}
